--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "leaflet": "^1.5.1",
         "lodash": "^4.17.15",
         "register-service-worker": "^1.6.2",
+        "serialize-javascript": "^2.1.2",
         "typedoc": "^0.15.0",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
